# wasserstein-agents-rs

./: AGENT.md  CAPABILITY.toml  Cargo.toml  INTEGRATION.md  README.md
src/: agents.rs  barycenter.rs  gradient_flow.rs  lib.rs  sliced.rs  transport.rs
